--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -82,15 +82,24 @@
             <datalist id="rooms"></datalist>
         </div>
     </div>
+    <div class="login-avatar">
+        <ul>
+<!--            <li class=""><img src="./dist/avatar/1.png"  alt=""></li>-->
+<!--            <li class="now"><img src="./dist/avatar/2.png"  alt=""></li>-->
+<!--            <li><img src="./dist/avatar/1.png" alt=""></li>-->
+<!--            <li><img src="./dist/avatar/2.png"  alt=""></li>-->
+            <li><img src="./dist/avatar/3.png" alt=""></li>
+            <li><img src="./dist/avatar/4.png" alt=""></li>
+            <li><img src="./dist/avatar/5.png" alt=""></li>
+            <li><img src="./dist/avatar/6.png"  alt=""></li>
+            <li><img src="./dist/avatar/7.png"  alt=""></li>
+            <li><img src="./dist/avatar/8.png"  alt=""></li>
+        </ul>
+    </div>
     <div class="login-button" onclick="login()">
         <a href="javascript:void(0);" id="login-button-submit" style="text-decoration:none;color:#ffffff;">进入</a>
     </div>
-    <div id="app">
-        <el-button @click="visible = true">Button</el-button>
-        <el-dialog :visible.sync="visible" title="Hello world">
-            <p>Try Element</p>
-        </el-dialog>
-    </div>
+
 </div>
 
 <script src="./js/jquery.min.js"></script>
@@ -114,11 +123,11 @@
 </body>
 
 <script>
-    new Vue({
-        el: '#app',
-        data: function() {
-            return { visible: false }
-        }
-    })
+    // new Vue({
+    //     el: '#app',
+    //     data: function() {
+    //         return { visible: false }
+    //     }
+    // })
 </script>
 </html>
