Tizzy sender avatar

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -86,9 +86,8 @@
         <ul>
 <!--            <li class=""><img src="./dist/avatar/1.png"  alt=""></li>-->
 <!--            <li class="now"><img src="./dist/avatar/2.png"  alt=""></li>-->
-<!--            <li><img src="./dist/avatar/1.png" alt=""></li>-->
-<!--            <li><img src="./dist/avatar/2.png"  alt=""></li>-->
-            <li><img src="./dist/avatar/3.png" alt=""></li>
+
+            <li class="now"><img src="./dist/avatar/3.png" alt=""></li>
             <li><img src="./dist/avatar/4.png" alt=""></li>
             <li><img src="./dist/avatar/5.png" alt=""></li>
             <li><img src="./dist/avatar/6.png"  alt=""></li>
