添加头像&发送时间

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -58,6 +58,7 @@
                  v-bind:title="clearTips">
             <img id="send" onclick="send()" src="icon/send.png" style="width: 24px;position: absolute;right: 10px"
                  v-bind:title="sendTips">
+            <img id="upload" onclick="upload()" src="icon/send.png" style="width: 24px;position: absolute;right: 10px"/>
         </div>
         <div contenteditable="true" id="text"></div>
     </div>
