--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html xmlns:v-bind="http://www.w3.org/1999/xhtml">
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
-    <title>Chat Room</title>
+    <title>ChatUs - A Anonymous Chat Room</title>
     <link href="./css/demo.css" rel="stylesheet" type="text/css"/>
     <link href="./css/normalize.css" rel="stylesheet" type="text/css"/>
     <link href="./css/canvi.css" rel="stylesheet" type="text/css"/>
@@ -57,7 +57,7 @@
             <img id="clear" onclick="emptyScreen()" src="icon/clear.png" style="width: 23px;margin-left: 10px"
                  v-bind:title="clearTips">
             <div style="width: 23px;margin-left: 10px;display: inline-block">
-                <input @change="upload($event)" accept="image/gif, image/jpg, image/jpeg, image/png"
+                <input @change="upload($event)" accept="image/jpg, image/jpeg, image/png"
                        id="upload-input" style="position: absolute;width: 23px;margin: 0;opacity: 0;"
                        type="file"/>
                 <!-- 自定义按钮效果 -->
@@ -76,10 +76,10 @@
 </div>
 
 <div class="login" id="window">
-    <div class="login-title">Enter the Chat</div>
+    <div class="login-title">ChatUs</div>
     <div class="login-input-content">
         <div class="login-input">
-            <label>Nickname</label>
+            <label>Name</label>
             <input class="list-input" id="nickname" placeholder="Please Enter the Nickname" type="text"/>
         </div>
         <div class="login-input">
